--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Bookbranch</string>
+    <string name="facebook_app_id">883798791697434</string>
+    <string name="fb_login_protocol_scheme">883798791697434</string>
 </resources>
